"New broadcast" page fixed Twitter options hidden by default

--- a/app/assets/stylesheets/broadcasts.scss
+++ b/app/assets/stylesheets/broadcasts.scss
@@ -1,7 +1,11 @@
 #broadcasts_controller {
 
-	#url-part {
-	    padding-top:1em;
+	#url-part, #twitter-char-count {
+		display: none;
+	}
+
+	#new_broadcast_text_area{
+		width: 90%;
 	}
 	
 	#split-arrow{
